[package]
name = "RustieWeather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "RustieWeather"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]

reqwest = { version = "0.11", features = ["json", "blocking"] } # reqwest with JSON parsing support
scraper = "0.13.0"
